[package]
name = "regtest_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
regex = "1.10.3"
tokio = { version = "1.36.0", features = ["full", "tracing"] }
