[package]
name = "bitceptron_regtest_utils"
version = "0.1.0"
edition = "2021"
description = "A tiny utility crate for running bitcoin's regtest network."
repository = "https://github.com/bitceptron/bitceptron_regtest_utils"
license = "MIT"
keywords = ["bitcoin","regtest", "bitcoin-dev", "bitcoin-testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.31.1"
bitcoincore-rpc = "0.18.0"
regex = "1.10.3"
